Fix navbar alignment, zoom display length

--- a/src/scss/_status-bar.scss
+++ b/src/scss/_status-bar.scss
@@ -87,6 +87,7 @@
         padding: 0;
 
         fieldset {
+          width: 128px;
           padding: 10px;
 
           label,
@@ -96,6 +97,10 @@
             margin: 0 5px;
           }
         }
+      }
+
+      #zoom-input {
+        width: 80px;
       }
     }
   }
